--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.10",
+    "framer-motion": "^11.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.22.1",
     "styled-components": "^6.1.13"
   },
