--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.10",
     "framer-motion": "^11.11.11",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.8",
+    "ogl": "^1.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
@@ -36,6 +39,6 @@
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.0"
+    "vite": "^7.0.6"
   }
 }
